Changes for 2018.3
===============================
sysmonpsu_v2_5:
Fixed Cppcheck warnings
Modified code for MISRA-C:2012 Compliance.

axidma_v9_8:
Fix cppcheck, gcc and doxygen warnings.

can_v3_3:
Fix cppcheck and GCC warnings.

emacps_v3_8:
Fix cppcheck, GCC and doxygen warnings.

gpiops_v3_4:
Resolved cppcheck warnings.(CR#1006331)
Resolved MISRA-C mandatory violations.(CR#1007751)

sdps_v3_6
Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
Add initializer macro for HasEMIO
Add support for using 64Bit DMA in 32Bit Processor
Add cache invalidation call before returning from ReadPolled API
Resolve compilation warnings for ARMCC toolchain

xilffs_v3_10:
Fix Cppcheck and Doxygen warnings
Modify sector buffer alignment to that of cache line supported

clockps_v1_0:
First release of clocksPS drivers.
Fix Doxygen and coverity reported issues.

cpu_v2_8:
Added Os and LTO settings in extra compiler flags for PMU BSP

iicps_v3_8:
Fix for Cppcheck and Doxygen warnings.

intc_v3_8:
Updated check_cascade proc, to add check
for irq_in pin.It fixes CR#1005371

qspipsu_v1_8:
Added support for IS25LP064 and IS25WP064.
Added an example for accessing 64bit dma within 32 bit application.(CR#1004701)
Removed checkpatch warnings for xqspipsu.c and xqspipsu.h
Removed the mentions of Spansion flash from BlockErase API. (CR#1006247)
Fixed cppcheck, doxygen and gcc warnings. (CR#1006336)
Setup64BRxDma() should be called if the RxAddress is greater than 32 bit address space. (CR#1006862)

rfdc_v5_0:
Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER and PLL_FPDIV ranges.
Add XRFdc_GetFabClkOutDiv() API to read fabric clk div.
Add Inline APIs XRFdc_CheckBlockEnabled(), XRFdc_CheckTileEnabled().
Add support to dump HSCOM regs in XRFdc_DumpRegs() API.
Fixed Multiband crossbar settings in C2C mode.
Add MixerType member to MixerSettings structure and Update Mixer Settings APIs to consider the MixerType variable.